--- a/src/content/works/work1/index.mdx
+++ b/src/content/works/work1/index.mdx
@@ -1,6 +1,6 @@
 ---
-cardName: "Design 1"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Infineon"
+listOfTags: ["Branding", "Packaging", "Logotype", "Animation", "Photography",]
 media:
   type: "video"
   poster: "./cover.png"
