--- a/src/content/works/work10/index.mdx
+++ b/src/content/works/work10/index.mdx
@@ -1,6 +1,6 @@
 ---
-cardName: "Design 6"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Favelagrafia"
+listOfTags: ["Animation"]
 media:
   type: "video"
   poster: "./cover.png"
