--- a/src/content/works/work9/index.mdx
+++ b/src/content/works/work9/index.mdx
@@ -1,6 +1,6 @@
 ---
-cardName: "Design 5"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Concrete Position"
+listOfTags: ["Art", "Animation", "Typography"]
 media:
   type: "video"
   poster: "./cover.png"
