--- a/src/content/works/work2/index.mdx
+++ b/src/content/works/work2/index.mdx
@@ -1,10 +1,9 @@
 ---
-cardName: "Design 1"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Zephyr"
+listOfTags: ["UI/UX", "Branding", "Logotype", "Animation"]
 media:
-  type: "video"
-  poster: "./cover.png"
-  src: "./animation.mp4"
+  type: "image"
+  src: "./cover.png"
   autoPlay: true
   muted: true
   loop: true
