--- a/src/content/works/work4/index.mdx
+++ b/src/content/works/work4/index.mdx
@@ -1,10 +1,9 @@
 ---
-cardName: "Design 4"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Riot-Related Injuries"
+listOfTags: ["Infographic", "Print", "Photography"]
 media:
-  type: "video"
-  poster: "./cover.png"
-  src: "./animation.mp4"
+  type: "image"
+  src: "./cover.png"
   autoPlay: true
   muted: true
   loop: true
