--- a/src/content/works/work8/index.mdx
+++ b/src/content/works/work8/index.mdx
@@ -1,10 +1,9 @@
 ---
-cardName: "Design 3"
-listOfTags: ["Tag4", "Tag5"]
+cardName: "Prussian Culture Museum"
+listOfTags: ["Branding", "Logotype", "Typography", "Print"]
 media:
-  type: "video"
-  poster: "./cover.png"
-  src: "./animation.mp4"
+  type: "image"
+  src: "./cover.png"
   autoPlay: true
   muted: true
   loop: true
